<resources>
    <string name="app_name">Court Counter</string>
    <string name="TeamA">Team A</string>
    <string name="TeamAscore">0</string>
    <string name="TeamBscore">0</string>
    <string name="TeamB">Team B</string>
    <string name="Three_pointers">+3 Points</string>
    <string name="Two_pointer">+2 Points</string>
    <string name="FreeThrow">Free Throw</string>
    <string name="reset">Reset</string>
</resources>
