<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="30sp"
            android:text="@string/TeamA"
            android:textColor="@color/black"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/scoreA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65sp"
            android:layout_marginTop="20sp"
            android:text="@string/TeamAscore"
            android:textColor="@color/black"
            android:textSize="50sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43sp"
            android:layout_marginTop="30sp"
            android:background="@color/orange"
            android:onClick="threePointer"
            android:padding="15sp"
            android:text="@string/Three_pointers"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43sp"
            android:layout_marginTop="15sp"
            android:background="@color/orange"
            android:onClick="twoPointer"
            android:padding="15sp"
            android:text="@string/Two_pointer"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43sp"
            android:layout_marginTop="15sp"
            android:background="@color/orange"
            android:onClick="freeThrow"
            android:padding="15sp"
            android:text="@string/FreeThrow"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="30sp"
            android:text="@string/TeamB"
            android:textColor="@color/black"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/scoreB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65sp"
            android:layout_marginTop="20sp"
            android:text="@string/TeamAscore"
            android:textColor="@color/black"
            android:textSize="50sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35sp"
            android:layout_marginTop="30sp"
            android:background="@color/orange"
            android:onClick="addthreePoints"
            android:padding="15sp"
            android:text="@string/Three_pointers"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35sp"
            android:layout_marginTop="15sp"
            android:background="@color/orange"
            android:onClick="addtwoPoints"
            android:padding="15sp"
            android:text="@string/Two_pointer"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15sp"
            android:background="@color/orange"
            android:onClick="addOnePoint"
            android:padding="15sp"
            android:text="@string/FreeThrow"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>



</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:onClick="reset"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="125sp"
            android:layout_marginTop="40sp"
            android:text="@string/reset"
            android:background="@color/orange"
            android:textSize="15sp"
            android:textColor="@color/black" />







    </LinearLayout>

</LinearLayout>















